Markdown convert via pandoc to html, update icons and index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="https://github.com/54shady">
 					<li><img src="pix/git.svg" alt="git logo"> My Github</li>
 				</a>
-				<a href="zdoc/index.html"><li> 🗒 My Docs</li></a>
+				<a href="zdoc/index.html"><li> 📒 My Docs</li></a>
 				<a href="qdoc/index.html"><li> 📚 Qemu Doc</li></a>
 				<a href="kdoc/index.html"><li> 📚 Linux Kernel Doc</li></a>
 				<a href="winapp"><li> 📦 WinApp</li></a>
@@ -33,13 +33,14 @@
 			<img class=resright src="pix/Linux-Logo.png" alt="linux" title="linux-logo">
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
-				<dt><a href="http://github.com/54shady/grice"><img src="pix/files.png" alt="grice">  My Linux Setup </a></dt>
-					<dd>Or access them on<a href="http://gitee.com/zeroway/grice"> Gitee grice</a>
+				<dt><a href="http://github.com/54shady/grice"> 📂 My Linux Setup </a></dt>
+					<dd>Access them on<a href="http://gitee.com/zeroway/grice"> Gitee grice</a>
 						or<a href="http://github.com/54shady/grice"> Github grice</a>.
 				</dd>
 
-				<dt><a href="zdoc/mygentoo/README.html"><img src="pix/gentoo-signet.svg" alt="Gentoo logo">  My Gentoo </a></dt>
-					<dd>My Gentoo Linux<a href="https://github.com/54shady/mygentoo"> on Github</a></dd>
+				<dt><a href="zdoc/mygentoo/README.html"><img
+						src="pix/gentoo-signet.svg" alt="Gentoo logo">  Gentoo Things </a></dt>
+					<dd>How I use gentoo linux<a href="https://github.com/54shady/mygentoo"> on Github</a></dd>
 			</dl>
 
 			<h2 style=clear:both;> 📜 Writings</h2>
@@ -47,7 +48,8 @@
 			<div class=column>
 				<h3> 🎯 Recent Articles</h3>
 				<ul style="padding:0">
-					<li>0000 &ndash; <a href="zdoc/index.html"> Zeroway's Documentataions </a></li>
+					<li>0000 &ndash; <a href="blog/firstblog.html"> Markdown file to HTML file via pandoc </a></li>
+					<li>0001 &ndash; <a href="zdoc/index.html"> Zeroway's Documentataions </a></li>
 					<strong><a href="blog.html">See all other blog posts...</a></strong>
 					</li>
 				</ul>
@@ -57,7 +59,7 @@
 				<h3> 🚩 Topic Space</h3>
 				<ul id=tagcloud>
 					<a href=zdoc/linuxc/README.html><li> 💽 Linux Programming</li></a>
-					<a href=zdoc/kernel_drivers_examples/README.html><li> 💽 Linux Kernel Programming</li></a>
+					<a href=zdoc/kernel_drivers_examples/README.html><li> 🐧 Linux Kernel Programming</li></a>
 					<a href=zdoc/fabvm/README.html><li> 💻 Virtual Machine scripts</li></a>
 				</ul>
 			</div>
