This site using color emoji font

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 				<h3> 🎯 Recent Articles</h3>
 				<ul style="padding:0">
 					<li>0000 &ndash; <a href="blog/firstblog.html"> Markdown file to HTML file via pandoc </a></li>
-					<li>0001 &ndash; <a href="zdoc/index.html"> Zeroway's Documentataions </a></li>
+					<li>0001 &ndash; <a href="blog/rss.html"> Add RSS for your website</a></li>
+					<li>0002 &ndash; <a href="blog/color-emoji.html"> Color Emoji</a></li>
 					<strong><a href="blog.html">See all other blog posts...</a></strong>
 					</li>
 				</ul>
