Update index file content and logo

--- a/index.html
+++ b/index.html
@@ -21,26 +21,50 @@
 					<li><img src="pix/git.svg" alt="git logo"> My Github</li>
 				</a>
 				<a href="zdoc/index.html"><li> 📒 My Docs</li></a>
-				<a href="qdoc/index.html"><li> 📚 Qemu Doc</li></a>
-				<a href="kdoc/index.html"><li> 📚 Linux Kernel Doc</li></a>
-				<a href="winapp"><li> 📦 WinApp</li></a>
+				<a href="qdoc/index.html">
+					<li><img src="pix/qemu.png" alt="qemu logo"> Qemu Doc</li>
+				</a>
+				<a href="kdoc/index.html">
+					<li>
+						🐧 Kernel Doc
+					</li>
+				</a>
+				<a href="vdoc/index.html"><li> 📒 VBook</li></a>
+				<a href="winapp">
+					<li>
+
+						<img src="pix/windows.png" alt="Windows logo">
+						WinApp
+					</li>
+				</a>
 				<a href="pdf"><li> 📁 PDFs</li></a>
 				<a href="video"><li> 📹 Videos</li></a>
 			</ul>
 		</nav>
 
 		<main>
-			<img class=resright src="pix/Linux-Logo.png" alt="linux" title="linux-logo">
+			<img class=resright src="pix/littletree.png" alt="linux" title="linux-logo">
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
-				<dt><a href="http://github.com/54shady/grice"> 📂 My Linux Setup </a></dt>
-					<dd>Access them on<a href="http://gitee.com/zeroway/grice"> Gitee grice</a>
-						or<a href="http://github.com/54shady/grice"> Github grice</a>.
-				</dd>
+				<dt>
+					<a href="http://github.com/54shady/grice">
+						💣 Gentoo Linux Rice
+					</a>
+				</dt>
+					<dd>
+						My config on<a href="http://gitee.com/zeroway/grice"> Gitee</a>
+						or<a href="http://github.com/54shady/grice"> Github</a>
+					</dd>
 
-				<dt><a href="zdoc/mygentoo/README.html"><img
-						src="pix/gentoo-signet.svg" alt="Gentoo logo">  Gentoo Things </a></dt>
-					<dd>How I use gentoo linux<a href="https://github.com/54shady/mygentoo"> on Github</a></dd>
+				<dt>
+					<a href="zdoc/mygentoo/README.html">
+						<img src="pix/gentoo-signet.svg" alt="Gentoo logo">
+						Gentoo Usage
+					</a>
+				</dt>
+					<dd>
+						Detail usage about Gentoo linux <a href="https://github.com/54shady/mygentoo"> on Github</a>
+					</dd>
 			</dl>
 
 			<h2 style=clear:both;> 📜 Writings</h2>
@@ -48,10 +72,10 @@
 			<div class=column>
 				<h3> 🎯 Recent Articles</h3>
 				<ul style="padding:0">
-					<li>0000 &ndash; <a href="blog/firstblog.html"> Markdown file to HTML file via pandoc </a></li>
-					<li>0001 &ndash; <a href="blog/rss.html"> Add RSS for your website</a></li>
-					<li>0002 &ndash; <a href="blog/color-emoji.html"> Color Emoji</a></li>
-					<strong><a href="blog.html">See all other blog posts...</a></strong>
+					<li>0000 &ndash; <a
+							href="blog/convert-markdown-file-to-html-via-pandoc.html"> Markdown file to HTML file via pandoc </a></li>
+					<li>0001 &ndash; <a href="blog/color-emoji-for-website.html"> Color Emoji</a></li>
+					<strong><a href="blogindex.html">👉 All blog gose here 👈</a></strong>
 					</li>
 				</ul>
 			</div>
@@ -59,18 +83,23 @@
 			<div class=column>
 				<h3> 🚩 Topic Space</h3>
 				<ul id=tagcloud>
-					<a href=zdoc/linuxc/README.html><li> 💽 Linux Programming</li></a>
+					<a href=zdoc/linuxc/README.html><li> 🐧 Linux Application Programming</li></a>
 					<a href=zdoc/kernel_drivers_examples/README.html><li> 🐧 Linux Kernel Programming</li></a>
-					<a href=zdoc/fabvm/README.html><li> 💻 Virtual Machine scripts</li></a>
+					<a href=zdoc/fabvm/README.html>
+						<li>
+							<img src="pix/qemu.png" alt="qemu logo">
+							Qemu Virtual Machine scripts
+						</li>
+					</a>
 				</ul>
 			</div>
 
 			<h3 style=clear:both><img src="pix/rss.svg" alt="rss logo"> Get updates via RSS</h3>
 
 			<pre style=max-width:300px;margin:auto;>
-<code>
-http://path/rss.xml
-</code>
+				<code>
+					http://this/site/rss.xml
+				</code>
 			</pre>
 
 			<h2><a href="/donate"> 💰 Donate.</a></h2>
@@ -85,6 +114,6 @@ http://path/rss.xml
 
 		</main>
 
-		<footer><a href="/">Power by nginx docker</a></footer>
+		<footer><a href="/">Power by ZeroWay</a></footer>
 	</body>
 </html>
