Create name logo via magick, replace windows logo with jpeg file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<a href="winapp">
 					<li>
 
-						<img src="pix/windows.png" alt="Windows logo">
+						<img src="pix/windows.jpeg" alt="Windows logo">
 						WinApp
 					</li>
 				</a>
@@ -43,7 +43,7 @@
 		</nav>
 
 		<main>
-			<img class=resright src="pix/littletree.png" alt="linux" title="linux-logo">
+			<img class=resright src="pix/logo.png" alt="linux" title="name-logo">
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
 				<dt>
