Add mouse over toggle logo setup

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 		</nav>
 
 		<main>
-			<img class=resright src="pix/logo.png" alt="linux" title="name-logo">
+			<img class=resright src="pix/logo.png"
+				onmouseover="this.src='pix/littletree.png'"
+				onmouseout="this.src='pix/logo.png'"
+				alt="linux" title="name-logo">
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
 				<dt>
