Reference local grice file

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
 				<dt>
-					<a href="http://github.com/54shady/grice">
+					<a href="zdoc/grice/README.html">
 						💣 Gentoo Linux Rice
 					</a>
 				</dt>
