Add a mouse latency test
Ref link: https://www.thewindowsclub.com/how-to-perform-mouse-latency-test
Copy from site: https://www.vsynctester.com/testing/mouse.html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				</a>
 				<a href="pdf"><li> 📁 PDFs</li></a>
 				<a href="video"><li> 📹 Videos</li></a>
+				<a href="mtest/testing/test.html"><li>🖱 Mouse Latency Test</li></a>
 			</ul>
 		</nav>
 
