Add build own platform resouces

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<a href="winapp">
 					<li>
 
-						<img src="pix/windows.jpeg" alt="Windows logo">
+						<img src="pix/windows.bmp" alt="Windows logo">
 						WinApp
 					</li>
 				</a>
@@ -48,17 +48,19 @@
 				onmouseover="this.src='pix/littletree.png'"
 				onmouseout="this.src='pix/logo.png'"
 				alt="linux" title="name-logo">
+
 			<h2> ⛳ Resources</h2>
 			<dl style=font-size:large>
+
 				<dt>
 					<a href="zdoc/grice/README.html">
 						💣 Gentoo Linux Rice
 					</a>
 				</dt>
-					<dd>
-						My config on<a href="http://gitee.com/zeroway/grice"> Gitee</a>
-						or<a href="http://github.com/54shady/grice"> Github</a>
-					</dd>
+				<dd>
+					My config on<a href="http://gitee.com/zeroway/grice"> Gitee</a>
+					or<a href="http://github.com/54shady/grice"> Github</a>
+				</dd>
 
 				<dt>
 					<a href="zdoc/mygentoo/README.html">
@@ -66,9 +68,16 @@
 						Gentoo Usage
 					</a>
 				</dt>
-					<dd>
-						Detail usage about Gentoo linux <a href="https://github.com/54shady/mygentoo"> on Github</a>
-					</dd>
+				<dd>
+					Detail usage about Gentoo linux <a href="https://github.com/54shady/mygentoo"> on Github</a>
+				</dd>
+
+				<dt>
+					<a href="bop.html">
+						🕸 Build You Own Platform
+					</a>
+				</dt>
+
 			</dl>
 
 			<h2 style=clear:both;> 📜 Writings</h2>
@@ -98,7 +107,9 @@
 				</ul>
 			</div>
 
-			<h3 style=clear:both><img src="pix/rss.svg" alt="rss logo"> Get updates via RSS</h3>
+			<h2 style=clear:both;>
+				<img src="pix/rss.svg" alt="rss logo"> Get updates via RSS
+			</h2>
 
 			<pre style=max-width:300px;margin:auto;>
 				<code>
