--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 				</dd>
 
 				<dt>
-					<a href="zdoc/mygentoo/README.html">
+					<a href="zdoc/mydistro/README.html">
 						<img src="pix/gentoo-signet.svg" alt="Gentoo logo">
 						Gentoo Usage
 					</a>
 				</dt>
 				<dd>
-					Detail usage about Gentoo linux <a href="https://github.com/54shady/mygentoo"> on Github</a>
+					Detail usage about Gentoo linux <a href="https://github.com/54shady/mydistro"> on Github</a>
 				</dd>
 
 				<dt>
