Update with myx path

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<title>Zeroway's WebSite</title>
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<!--		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />-->
+		<!-- 添加版本号强制刷新 -->
+		<link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
 		<link rel='stylesheet' type='text/css' href='style.css'>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 		<link rel='alternate' type='application/rss+xml' title='Zeroway RSS' href='/rss.xml'>
@@ -29,7 +31,6 @@
 						🐧 Kernel Doc
 					</li>
 				</a>
-				<a href="vdoc/index.html"><li> 📒 VBook</li></a>
 				<a href="winapp">
 					<li>
 
@@ -96,8 +97,8 @@
 			<div class=column>
 				<h3> 🚩 Topic Space</h3>
 				<ul id=tagcloud>
-					<a href=zdoc/linuxc/README.html><li> 🐧 Linux Application Programming</li></a>
-					<a href=zdoc/kernel_drivers_examples/README.html><li> 🐧 Linux Kernel Programming</li></a>
+					<a href=zdoc/mylnx/README.html><li> 🐧 Linux Application Programming</li></a>
+					<a href=zdoc/mydev/index.html><li> 🐧 Linux Kernel Programming</li></a>
 					<a href=zdoc/fabvm/README.html>
 						<li>
 							<img src="pix/qemu.png" alt="qemu logo">
